--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <section class="banner d-flex justify-content-center align-items-center">
+    <!-- <section class="banner d-flex justify-content-center align-items-center">
         <div class="container text-center ">
             <h1 class="text-white">Welcom to PGMAN</h1>
             <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -17,6 +17,18 @@
             <a class="btn btn-success" th:href="signup">Get Start</a>
             <a class="btn btn-success" th:href="@{/guest/dashboard}">Get Start</a>
         </div>
-    </section>   
+    </section>    -->
+    <section>
+        <div class="row">
+            <div class="col">
+                <div class="container-fluid">
+                    <h1 class="quotes">A better way to Manage your PG</h1>
+                </div>
+            </div>
+            <div class="col">
+
+            </div>
+        </div>
+    </section>
 </body>
 </html>
