--- a/src/main/resources/templates/ownerviews/guestdetails.html
+++ b/src/main/resources/templates/ownerviews/guestdetails.html
@@ -56,18 +56,29 @@
                             </tr>
                         </table>
 
-                        <div th:if="${guest.enabled}">
-                            <a class=" btn btn-warning btn-block" th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/deactivate'}">Deactivate</a>
-                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div th:if="${guest.enabled}">
+                                    <a class=" btn btn-warning btn-block"
+                                        th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/deactivate'}">Deactivate</a>
+                                </div>
 
-                        <div th:if="${!guest.enabled}">
-                            <a class=" btn btn-success btn-block" th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/activate'}">Activate</a>
-                            <p class="text-muted mt-2">User is not Active, check and verify the document to activate the user</p>
-                        </div>
+                                <div th:if="${!guest.enabled}">
+                                    <a class=" btn btn-success btn-block"
+                                        th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/activate'}">Activate</a>
+                                </div>
+                            </div>
 
-                        <div>
-                            <button type="button" class="btn btn-block btn-warning mt-3" data-target="#cashCollect-modal"
-                            data-toggle="modal">Collect cash</button>
+                            <div class="col">
+                                <div>
+                                    <button type="button" class="btn btn-block btn-success"
+                                        data-target="#cashCollect-modal" data-toggle="modal">Collect cash</button>
+                                </div>
+                            </div>
+                            <div th:if="${!guest.enabled}" class="container-fluid text-center">
+                                <p class="text-muted mt-2">User is not Active, check and verify the document to
+                                    activate the user</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +133,7 @@
                     <div class="card">
                         <h2 class="text-muted">Document</h2>
                         <p class="mt-3 text-danger" th:if="${guest.document == null}">
-                            Documnet not uploaded by 
+                            Documnet not uploaded by
                             <span th:text="${guest.name}"></span>
                         </p>
                         <div th:if="${guest.document != null}">
@@ -146,7 +157,7 @@
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
-    
+
                         <!-- ADD FLOOR MODAL BODY -->
                         <div class="modal-body">
                             <div class="container-fluid text-center">
@@ -165,34 +176,33 @@
                                         </div>
                                     </tr>
                                 </table>
-                                <form action="">
-                                    </div>
-                                    <div class="input-group form-group ">
-                                        <div class="input-group-text">
-                                            <i class="fa-solid fa-indian-rupee-sign"></i>
-                                        </div>
-                                        <!-- <label for="cash-amount">Amount</label> -->
-                                        <input type="number" name="amount" class="form-control" id="amount"
-                                            placeholder="Enter amount" required>
-                                    </div>
-                                </form>
-        
-                                <div>
-                                    <!-- <button type="submit" id="update-pg" th:onclick="|collectcash(${flr.id})|" class="btn btn-block btn-success">Collect</button> -->
-                                    <button type="submit" id="update-pg" class="btn btn-block btn-success">Collect</button>
-                                </div>
-                                </form>
+                                <form th:action="@{/owner/collect-cash}" method="post">
                             </div>
+                            <div class="input-group form-group ">
+                                <div class="input-group-text">
+                                    <i class="fa-solid fa-indian-rupee-sign"></i>
+                                </div>
+                                <!-- <label for="cash-amount">Amount</label> -->
+                                <input type="number" name="amount" class="form-control" id="amount"
+                                    placeholder="Enter amount" required>
+                                <input type="text" name="guestId" th:value="${guest.id}" hidden>
+                            </div>
+                            <div>
+                                <!-- <button type="submit" id="update-pg" th:onclick="|collectcash(${flr.id})|" class="btn btn-block btn-success">Collect</button> -->
+                                <button type="submit" id="update-pg" class="btn btn-block btn-success">Collect</button>
+                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <script>
-                function collectCash(amount) {
+        <script>
+            function collectCash(amount) {
                 swal({
                     title: "Are you sure?",
-                    text: "You are collected "+amount,
+                    text: "You are collected " + amount,
                     icon: "warning",
                     button: true,
                     dangerMode: true,
@@ -204,7 +214,7 @@
                     }
                 });
             }
-            </script>
+        </script>
     </section>
 </body>
 
