--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,182 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="base::layout(~{::section})">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
+
 <body>
-    <!-- <section class="banner d-flex justify-content-center align-items-center">
-        <div class="container text-center ">
-            <h1 class="text-white">Welcom to PGMAN</h1>
-            <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Quibusdam dolor asperiores quisquam ad natus aspernatur fuga 
-            dignissimos facere ipsam culpa delectus assumenda, mollitia quia 
-            corrupti nisi molestias aliquid sunt necessitatibus?</p>
-            <a class="btn btn-success" th:href="signup">Get Start</a>
-            <a class="btn btn-success" th:href="@{/guest/dashboard}">Get Start</a>
-        </div>
-    </section>    -->
     <section>
-        <div class="row">
-            <div class="col">
-                <div class="container-fluid">
-                    <h1 class="quotes">A better way to Manage your PG</h1>
+        <section style="max-height: 50vh">
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <!-- <ol class="carousel-indicators">
+                  <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                  <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol> -->
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img class="d-block w-100" th:src="${'/assests/home1.jpg'}" alt="First slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" th:src="${'/assests/home2.jpg'}" alt="Second slide">
+                  </div>
+                  <div class="carousel-item">
+                    <img class="d-block w-100" th:src="${'/assests/home3.jpg'}" alt="Third slide">
+                  </div>
                 </div>
-            </div>
-            <div class="col">
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="sr-only">Next</span>
+                </a>
+              </div>
+        </section>
+
+        <!-- Way of management -->
+        <section class="banner-back">
+            <div class="row banner-background">
+                <div class="col">
+                    <div class="container-fluid">
+                        <h1 class="quotes text-white mt-5 text-center">A better way of <span style="color: #F3D250 !important">Management</span></h1>
+                        <!-- <img class="banner-pic" th:src="${'/assests/ab-1.png'}" alt=""> -->
+                        <div class="card definition text-center mt-3">
+                            <p>Easy to mange your PG, Hostel and your lodge.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A laborum minima totam veniam
+                                explicabo, adipisci, consequuntur odio cupiditate aut repellat nihil ullam nisi ex
+                                deserunt
+                                illo veritatis facere quisquam. Dolore?</p>
+                                
+                        </div>
+                    </div>
+                    <img class="flying-aero my-5" th:src="${'/assests/flyingAero.png'}" alt="">
+                </div>
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/ab-1.png'}" alt="">
+                    </div>
+                </div>
 
             </div>
-        </div>
+        </section>
+
+        <!-- Easy to register -->
+        <section class="banner-background">
+            <div class="row">
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/register.png'}" alt="">
+                        
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container text-center">
+                        <h1 class="quotes text-white mt-5">Easy to register</h1>
+                        <div class="card definition text-center mt-3">
+                            <p>you can easily register to get the benifit</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quam, fuga quod hic earum
+                            libero corrupti odio rem tenetur explicabo maxime at cum fugiat esse adipisci, suscipit,
+                            blanditiis quo. Eaque!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Easy to pay -->
+        <section class="banner-back">
+            <div class="row">
+                <div class="col">
+                    <div class="container text-center">
+                        <h1 class="monitor mt-5">Easy to Pay</h1>
+                        <div class="card definition text-center mt-3">
+                            <p>Multiple payment options are avialiable</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor quam, fuga quod hic earum
+                            libero corrupti odio rem tenetur explicabo maxime at cum fugiat esse adipisci, suscipit,
+                            blanditiis quo. Eaque!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/payment.png'}" alt="">
+                    </div> 
+                </div>
+            </div>
+        </section>
+
+        <!-- Easy to Monitor -->
+        <section class="banner-back">
+            <div class="row">
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/work.png'}" alt="">
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container-fluid text-center">
+                        <h1 class="mt-5 text-center monitor">Easy to <span>monitor</span></h1>
+                        <div class="card definition text-center mt-3">
+                            <p>Easy to monitor your assets</p>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
+                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
+                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Dashboard are availiable -->
+        <section class="banner-back dashboard">
+            <div class="row">
+                <div class="col">
+                    <div class="container-fluid text-center">
+                        <h1 class="mt-5 text-center monitor">Dashboard</span></h1>
+                        <div class="card definition text-center mt-3">
+                            <p class="primary-dark">Dashboard is availiable to view your Data</p>
+                            <p class="primary-dark">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
+                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
+                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/monitor.png'}" alt="">
+                    </div> 
+                </div>
+            </div>
+        </section>
+
+        <!-- savetime -->
+        <section class="banner-back dashboard">
+            <div class="row">
+                <div class="col">
+                    <div class="container-fluid text-center">
+                        <h1 class="mt-5 text-center monitor">Save your time</span></h1>
+                        <div class="card definition text-center mt-3">
+                            <p class="primary-dark">Save your time from management</p>
+                            <p class="primary-dark">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam dignissimos vitae
+                                magnam consectetur eaque. Rem, ad tenetur placeat, quam, quisquam quaerat sunt harum
+                                itaque culpa impedit facilis? Repudiandae, officiis aut!</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="container text-center">
+                        <img class="banner-pic my-5" th:src="${'/assests/saveTime.png'}" alt="">
+                    </div> 
+                </div>
+            </div>
+        </section>
     </section>
 </body>
+
 </html>
